--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
+	      <name>Release Test</name>
+	      <url>https://nexus.onedev.neustar.biz/repository/maven-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <name>Internal Test</name>
+	      <url>https://nexus.onedev.neustar.biz/repository/maven-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
